# android-EdgeDetection

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/parasde/example/: CameraActivity.kt
app/src/main/jni/: CMakeLists.txt  camera.cpp
app/src/main/res/drawable/: button.xml  camera_outlines.xml  capture.xml
app/src/main/res/layout/: activity_camera.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
